# rust_actix_postgres_backend

./: .env  Cargo.toml  README.md  test.txt
sql/: add_plantdata.sql  add_user.sql  schema.sql
src/: main.rs
src/config/: mod.rs
src/db/: mod.rs
src/errors/: mod.rs
src/handlers/: mod.rs
src/models/: mod.rs
